# api_project

./: .gitignore  pyproject.toml
app/authenticate/: admin.py  models.py  serializers.py  urls.py  views.py
app/authenticate/migrations/: 0001_initial.py  0002_remove_user_company_id_user_company.py
app/core/: settings.py  urls.py
app/crmlite/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
app/crmlite/migrations/: 0001_initial.py  0002_rename_company_id_storage_company.py  0003_alter_company_options_alter_storage_options.py  0004_alter_storage_company.py  0005_supplier_supply.py  0006_product_supplyproduct_supply_products.py  0007_alter_product_quantity.py  0008_remove_supply_products_remove_supplyproduct_product_and_more.py
app/crmlite/schemas/: company_schemas.py  storage_schemas.py
